output.txt
warning: unknown warning option '-Wlogical-op'; did you mean '-Wliblto'? [-Wunknown-warning-option]
1 warning generated.
warning: unknown warning option '-Wlogical-op'; did you mean '-Wliblto'? [-Wunknown-warning-option]
ketje.c:50:22: error: unknown type name 'Duplex_object'
MonkeyWrapInitialize(Duplex_object *D, unsigned char *key,
                     ^
ketje.c:90:36: warning: passing 'const unsigned char *' to parameter of type 'unsigned char *' discards qualifiers [-Wincompatible-pointer-types-discards-qualifiers]
MonkeyWrap(D,cryptogram,tag, t_len,key,
                                   ^~~
ketje.c:44:19: note: passing argument to parameter 'key' here
                 unsigned char *key, unsigned int k_len,
                                ^
ketje.c:91:7: warning: passing 'const unsigned char *' to parameter of type 'unsigned char *' discards qualifiers [-Wincompatible-pointer-types-discards-qualifiers]
k_len,nonce,n_len,data, d_len,header, h_len);
      ^~~~~
ketje.c:45:19: note: passing argument to parameter 'nonce' here
                 unsigned char *nonce, unsigned int n_len,
                                ^
ketje.c:91:19: warning: passing 'const unsigned char *' to parameter of type 'unsigned char *' discards qualifiers [-Wincompatible-pointer-types-discards-qualifiers]
k_len,nonce,n_len,data, d_len,header, h_len);
                  ^~~~
ketje.c:46:19: note: passing argument to parameter 'data' here
                 unsigned char *data, unsigned long d_len,
                                ^
ketje.c:91:31: warning: passing 'const unsigned char *' to parameter of type 'unsigned char *' discards qualifiers [-Wincompatible-pointer-types-discards-qualifiers]
k_len,nonce,n_len,data, d_len,header, h_len);
                              ^~~~~~
ketje.c:47:19: note: passing argument to parameter 'header' here
                 unsigned char *header, unsigned long h_len);
                                ^
ketje.c:124:44: warning: incompatible pointer types passing 'char *' to parameter of type 'unsigned char **' [-Wincompatible-pointer-types]
        unsigned int len = (unsigned int) pad10x1(p,D->f,n_bits);
                                                  ^
./keccak.h:35:39: note: passing argument to parameter 'P' here
unsigned long pad10x1(unsigned char **P, unsigned int x, unsigned int m);
                                      ^
ketje.c:125:14: warning: incompatible pointer types passing 'char *' to parameter of type 'unsigned char **' [-Wincompatible-pointer-types]
        concatenate(s,I,n_bits,p,len);
                    ^
./keccak.h:24:43: note: passing argument to parameter 'Z' here
unsigned long concatenate(unsigned char **Z,
                                          ^
ketje.c:125:25: warning: passing 'char *' to parameter of type 'const unsigned char *' converts between pointers to integer types with different sign [-Wpointer-sign]
        concatenate(s,I,n_bits,p,len);
                               ^
./keccak.h:26:27: note: passing argument to parameter 'Y' here
                          const unsigned char *Y, unsigned long Y_len);
                                               ^
ketje.c:128:4: warning: assigning to 'char *' from 'unsigned char *' converts between pointers to integer types with different sign [-Wpointer-sign]
        s = I;
          ^ ~
ketje.c:133:26: warning: passing 'char *' to parameter of type 'unsigned char *' converts between pointers to integer types with different sign [-Wpointer-sign]
D->state = keccak_p_star(s,D->f,D->n_start,D->rho);
                         ^
./keccak.h:19:45: note: passing argument to parameter 'S' here
unsigned char *keccak_p_star(unsigned char *S, unsigned long b, int nr, int l);
                                            ^
ketje.c:133:10: warning: assigning to 'char *' from 'unsigned char *' converts between pointers to integer types with different sign [-Wpointer-sign]
D->state = keccak_p_star(s,D->f,D->n_start,D->rho);
         ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ketje.c:151:36: warning: incompatible pointer types passing 'unsigned char *' to parameter of type 'unsigned char **'; take the address with & [-Wincompatible-pointer-types]
unsigned long i_len  = concatenate(I,header,h_len,nonce,n_len);
                                   ^
                                   &
./keccak.h:24:43: note: passing argument to parameter 'Z' here
unsigned long concatenate(unsigned char **Z,
                                          ^
ketje.c:149:14: warning: unused variable 'i' [-Wunused-variable]
unsigned int i = 0 ;
             ^
ketje.c:148:19: warning: unused variable 'wrap_init_output' [-Wunused-variable]
unsigned char *I,*wrap_init_output;
                  ^
ketje.c:137:38: warning: unused parameter 'cryptogram' [-Wunused-parameter]
MonkeyWrap(Duplex *D, unsigned char *cryptogram,
                                     ^
ketje.c:138:18: warning: unused parameter 'tag' [-Wunused-parameter]
                unsigned char *tag, unsigned int t_len,
                               ^
ketje.c:138:36: warning: unused parameter 't_len' [-Wunused-parameter]
                unsigned char *tag, unsigned int t_len,
                                                 ^
ketje.c:139:18: warning: unused parameter 'key' [-Wunused-parameter]
                unsigned char *key, unsigned int k_len,
                               ^
ketje.c:139:36: warning: unused parameter 'k_len' [-Wunused-parameter]
                unsigned char *key, unsigned int k_len,
                                                 ^
ketje.c:141:19: warning: unused parameter 'data' [-Wunused-parameter]
                 unsigned char *data, unsigned long d_len,
                                ^
ketje.c:141:39: warning: unused parameter 'd_len' [-Wunused-parameter]
                 unsigned char *data, unsigned long d_len,
                                                    ^
ketje.c:175:7: warning: incompatible integer to pointer conversion assigning to 'unsigned char *' from 'unsigned int' [-Wint-conversion]
dummy = seq_no;
      ^ ~~~~~~
ketje.c:177:9: warning: incompatible pointer types passing 'unsigned char *' to parameter of type 'unsigned char **'; take the address with & [-Wincompatible-pointer-types]
keypack(keyp,key,k_len + 16 ,D->f);
        ^~~~
        &
ketje.c:62:25: note: passing argument to parameter 'result' here
keypack(unsigned char** result,unsigned char *key,
                        ^
ketje.c:178:38: warning: incompatible pointer types passing 'unsigned char *' to parameter of type 'unsigned char **'; take the address with & [-Wincompatible-pointer-types]
unsigned int total_len = concatenate(I,keyp,D->f,dummy,8);
                                     ^
                                     &
./keccak.h:24:43: note: passing argument to parameter 'Z' here
unsigned long concatenate(unsigned char **Z,
                                          ^
ketje.c:178:14: warning: unused variable 'total_len' [-Wunused-variable]
unsigned int total_len = concatenate(I,keyp,D->f,dummy,8);
             ^
ketje.c:191:27: warning: incompatible pointer types passing 'unsigned char *' to parameter of type 'unsigned char **'; take the address with & [-Wincompatible-pointer-types]
result_size = concatenate(pad_key,&B_val,(unsigned long) 8, key,n_bits);
                          ^~~~~~~
                          &
./keccak.h:24:43: note: passing argument to parameter 'Z' here
unsigned long concatenate(unsigned char **Z,
                                          ^
ketje.c:193:23: warning: incompatible pointer types passing 'unsigned char *' to parameter of type 'unsigned char **'; take the address with & [-Wincompatible-pointer-types]
result_size = pad10x1(padding,l,n_bits + 8);
                      ^~~~~~~
                      &
./keccak.h:35:39: note: passing argument to parameter 'P' here
unsigned long pad10x1(unsigned char **P, unsigned int x, unsigned int m);
                                      ^
27 warnings and 1 error generated.
warning: unknown warning option '-Wlogical-op'; did you mean '-Wliblto'? [-Wunknown-warning-option]
keccak.c:72:4: warning: implicitly declaring library function 'printf' with type 'int (const char *, ...)' [-Wimplicit-function-declaration]
                        printf("\n");
                        ^
keccak.c:72:4: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
keccak.c:254:62: warning: unused parameter 'b' [-Wunused-parameter]
unsigned char *keccak_p_star(unsigned char *S, unsigned long b, int nr, int l)
                                                             ^
keccak.c:254:69: warning: unused parameter 'nr' [-Wunused-parameter]
unsigned char *keccak_p_star(unsigned char *S, unsigned long b, int nr, int l)
                                                                    ^
keccak.c:254:77: warning: unused parameter 'l' [-Wunused-parameter]
unsigned char *keccak_p_star(unsigned char *S, unsigned long b, int nr, int l)
                                                                            ^
keccak.c:264:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
6 warnings generated.
make: *** [ketje_driver] Error 1
